# MyFirstRat

./: .pylintrc  pyproject.toml  readme.md
src/: .gitignore  cli.py  requirements.txt
src/modules/: configurator.py  loader.py  remote_shell.py  sftp_client.py  utils.py
src/modules/extensions/: ext2.py  scanner.py  sftp_client.py
src/modules/scripts/: wget.cmd
src/modules/scripts/installers/: installer.ps1  installer.py  installer.spec  readme.md
src/modules/scripts/keylogger/: keylogger.ps1
