[tool.poetry]
name = "RCLI"
version = "0.1.0"
description = ""
authors = ["hallowslab <hallow.tech.lab@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
paramiko = "^2.11.0"
mypy = "^0.982"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.4.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
