[tool.poetry]
name = "RCLI"
version = "0.3.0"
description = ""
authors = ["hallowslab <hallow.tech.lab@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
paramiko = "^2.11.0"
mypy = "^0.982"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.4.1"
black = "^22.8.0"
taskipy = "^1.10.3"
pylint = "^2.15.3"
flake8 = "^5.0.4"

[tool.taskipy.tasks]
format = "Black ."
lint = "pylint src"
flake = "flake8 src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
